@@ -35,6 +35,7 @@
 			<label index="tx_bzdstaffdirectory_persons.universal_field_3">Universal field 3</label>
 			<label index="tx_bzdstaffdirectory_persons.universal_field_4">Universal field 4</label>
 			<label index="tx_bzdstaffdirectory_persons.universal_field_5">Universal field 5</label>
+			<label index="tx_bzdstaffdirectory_persons.sorting">Sorting</label>
 			<label index="tx_bzdstaffdirectory_groups">Workgroups</label>
 			<label index="tx_bzdstaffdirectory_groups.group_name">Group Name</label>
 			<label index="tx_bzdstaffdirectory_groups.group_leaders">Group Leaders</label>
@@ -116,6 +117,7 @@
 			<label index="tx_bzdstaffdirectory_persons.universal_field_3">Universelles Feld 3</label>
 			<label index="tx_bzdstaffdirectory_persons.universal_field_4">Universelles Feld 4</label>
 			<label index="tx_bzdstaffdirectory_persons.universal_field_5">Universelles Feld 5</label>
+			<label index="tx_bzdstaffdirectory_persons.sorting">Sortierung</label>
 			<label index="tx_bzdstaffdirectory_groups">Abteilungen</label>
 			<label index="tx_bzdstaffdirectory_groups.group_name">Abteilungsname</label>
 			<label index="tx_bzdstaffdirectory_groups.group_leaders">Gruppenleiter</label>
@@ -326,6 +328,7 @@
 			<label index="pi_flexform_source_fromteamleaders" type="integer">237852766</label>
 			<label index="tx_bzdstaffdirectory_groups.infopage" type="integer">65051560</label>
 			<label index="tt_content.pi_flexform.showSingleViewAsPopUp" type="integer">176376326</label>
+			<label index="tx_bzdstaffdirectory_persons.sorting" type="integer">41978420</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="tx_bzdstaffdirectory_persons" type="integer">213615287</label>
@@ -483,6 +486,7 @@
 			<label index="pi_flexform_source_fromteamleaders">from teams</label>
 			<label index="tx_bzdstaffdirectory_groups.infopage">Page with information about this team</label>
 			<label index="tt_content.pi_flexform.showSingleViewAsPopUp">Show the single view in a pop-up?</label>
+			<label index="tx_bzdstaffdirectory_persons.sorting">Sorting</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="tx_bzdstaffdirectory_persons">Persons</label>
