@@ -1,4 +1,5 @@
 version 0.5.0 - currently working on
+- Feature: Manual sorting for team leaders in list view (#329)
 - Feature: Open detailed view in pop-up (#141)
 - Feature: Added more information to the team records (#247)
 - Code cleanup (#804)
